Add filtering feature.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "biojs-io-newick": "^1.5.0",
+    "filtering-query": "^0.1.0-alpha.1",
     "jsonpath": "^1.1.1",
     "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
