--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.0.0",
     "biojs-io-newick": "^1.5.0",
+    "cross-env": "^7.0.3",
     "filtering-query": "^0.1.0-alpha.1",
     "jsonpath": "^1.1.1",
     "pubsub-js": "^1.9.4",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
