--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-scripts": "^5.0.0",
+    "react-simple-maps": "^2.3.0",
     "react-three-state-checkbox": "^2.0.0",
     "recoil": "^0.6.1",
     "web-vitals": "^2.1.4"
